--- a/index.html
+++ b/index.html
@@ -16,7 +16,16 @@
 
         </section>
         <main class="clearfix">
+            <div class="top">
 
+            </div>
+            <div class="left clm">
+
+            </div>
+            <div class="center clm">
+
+            </div>
+            <div class="right clm"></div>
 
         </main>
         <footer>
