--- a/index.html
+++ b/index.html
@@ -8,30 +8,36 @@
     <title>Float Layout</title>
 </head>
 <body>
+    <div class="container debug">
   
-        <header>
+            <header class="mb-2">
 
-        </header>
-        <section class="page-center">
+            </header>
+            
+            <main>
+                <section class="page-banner mb-2">
 
-        </section>
-        <main class="clearfix">
-            <div class="top">
+                </section>
+                <section class="content">
+                    <div class="top content mb-2">
 
-            </div>
-            <div class="left clm">
+                    </div>
+                    <div class="content-bottom clearfix">
+                        <div class="left clm">
 
-            </div>
-            <div class="center clm">
+                        </div>
+                        <div class="center clm">
 
-            </div>
-            <div class="right clm"></div>
+                        </div>
+                        <div class="right clm"></div>
+                    </div>
+                </section>
 
-        </main>
-        <footer>
+            </main>
+            <footer>
 
-        </footer>
-
+            </footer>
+    </div>
     
 </body>
 </html>
